src/objects/Entitlement_Mapping_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Case_type__c</fullName>
        <label>Case type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Advanced Support</fullName>
                </value>
                <value>
                    <fullName>Complnt Mgt/Cust Rel</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Document Request</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>HW Delivery</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Marketing/Prod Info</fullName>
                </value>
                <value>
                    <fullName>MC BCS</fullName>
                </value>
                <value>
                    <fullName>MC Non-BCS</fullName>
                </value>
                <value>
                    <fullName>MC Datacenter</fullName>
                </value>
                <value>
                    <fullName>Misrouted Call</fullName>
                </value>
                <value>
                    <fullName>New Service/Consult</fullName>
                </value>
                <value>
                    <fullName>Performance Tune/Chk</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Questions</fullName>
                </value>
                <value>
                    <fullName>SW Delivery</fullName>
                </value>
                <value>
                    <fullName>CE Assist</fullName>
                </value>
                <value>
                    <fullName>Please Specify</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>ECAG Case (Fax)</fullName>
                </value>
                <value>
                    <fullName>ECAG Case (Letter)</fullName>
                </value>
                <value>
                    <fullName>ECAG Case (Phone)</fullName>
                </value>
                <value>
                    <fullName>ECAG Case (Email)</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliverable_Keyword__c</fullName>
        <label>Deliverable Keyword</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_type__c</fullName>
        <label>Entitlement type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Fixed Carepack</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Not found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modifier_Key__c</fullName>
        <label>Modifier Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifier_Value__c</fullName>
        <label>Modifier Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTC_type__c</fullName>
        <label>OTC type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>05R-Normal Contract</fullName>
                </value>
                <value>
                    <fullName>02N-Warranty Normal</fullName>
                </value>
                <value>
                    <fullName>05A-Complmt TAC</fullName>
                </value>
                <value>
                    <fullName>05K-Extended Warranty</fullName>
                </value>
                <value>
                    <fullName>05Q-Preventative</fullName>
                </value>
                <value>
                    <fullName>02G-Sevice Note</fullName>
                </value>
                <value>
                    <fullName>06J-Intl Gratis</fullName>
                </value>
                <value>
                    <fullName>00C-Cust Claims Cont</fullName>
                </value>
                <value>
                    <fullName>00W-Cust Claims Warr</fullName>
                </value>
                <value>
                    <fullName>01-Trade</fullName>
                </value>
                <value>
                    <fullName>06M-Intl re-repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Name_Keyword__c</fullName>
        <label>Offer Name Keyword</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Priority__c</fullName>
        <label>Offer Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_name__c</fullName>
        <label>Package name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>Response Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <label>SLA Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Entitlement Mapping Rule</label>
    <listViews>
        <fullName>Entitlement_Mapping_Rule</fullName>
        <columns>NAME</columns>
        <columns>Modifier_Key__c</columns>
        <columns>Entitlement_type__c</columns>
        <columns>Package_name__c</columns>
        <columns>Deliverable_Keyword__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Offer_Priority__c</columns>
        <columns>OTC_type__c</columns>
        <columns>Offer_Name_Keyword__c</columns>
        <columns>SLA__c</columns>
        <columns>SLA_Type__c</columns>
        <columns>Response_Time__c</columns>
        <columns>Case_type__c</columns>
        <columns>Modifier_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>Entitlement Mapping Rule</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EM-{000000}</displayFormat>
        <label>Query Number</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Case_Type_Mapping_Rule</fullName>
        <active>true</active>
        <label>Case Type Mapping Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guaranteed_DT_Mapping_Rule</fullName>
        <active>true</active>
        <label>Guaranteed DT Mapping Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Latest_DT_Mapping_Rule</fullName>
        <active>true</active>
        <label>Latest DT Mapping Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Modifier_Mapping_Rule</fullName>
        <active>true</active>
        <label>Modifier Mapping Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>OTC_Mapping_Rule</fullName>
        <active>true</active>
        <label>OTC Mapping Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Offer_Name_Mapping_Rule</fullName>
        <active>true</active>
        <label>Offer Name Mapping Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requested_DT_Mapping_Rule</fullName>
        <active>true</active>
        <label>Requested DT Mapping Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>